Ingress/old/testing/services.yml
---
#Service app-a
apiVersion: v1
kind: Service
metadata:
  name: app-a
  labels:
    app: app-a
spec:
  ports:
    - port: 8080
    -targehPort:80
  selector:
    app: app-a
  type: LoadBalancer

---

#Service app-b
apiVersion: v1
kind: Service
metadata:
  name: app-b
  labels:
    app: app-b
spec:
  ports:
    - port: 8081
  selector:
    app: app-b
  type: LoadBalancer
